p5.js included via cdn link and sketch.js included via relative path

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
-    <head>
-        <script src="C:/Users/stovi/Downloads/p5/p5/p5.js"></script>
-        <script src="D:\Programming\Javascript\dotsAI\sketch.js"></script>
-    </head>
+<head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
+    <script src="sketch.js"></script>
+</head>
+<body>
+</body>
 </html>
